--- a/index.html
+++ b/index.html
@@ -327,6 +327,30 @@
                         0 0 70px rgba(255, 20, 147, 0.2),
                         0 0 20px #ff14ff; /* Glow pink effect */
         }
+
+        /* Animated border */
+        .animated-border {
+            position: absolute;
+            top: -5px;
+            left: -5px;
+            right: -5px;
+            bottom: -5px;
+            border: 5px solid transparent;
+            border-radius: 50%;
+            z-index: 1;
+            animation: animateBorder 4s linear infinite;
+        }
+
+        @keyframes animateBorder {
+            0% {
+                transform: rotate(0deg);
+                box-shadow: 0 0 20px rgba(255, 20, 147, 0.8);
+            }
+            100% {
+                transform: rotate(360deg);
+                box-shadow: 0 0 20px rgba(255, 20, 147, 0.8);
+            }
+        }
     </style>
 </head>
 <body>
@@ -348,6 +372,7 @@
         </header>
         <div class="content">
             <div class="profile-picture">
+                <div class="animated-border"></div> <!-- Animated border -->
                 <img src="448969993_1005954630665614_4173930242296266244_n.jpg" alt="Profile Picture">
             </div>            
             <div class="intro">
