--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             color: #fff;
             position: relative; /* For layering content over the video */
             min-height: 100vh; /* Ensure body takes at least full viewport height */
+            background-color: #000;
         }
 
         #loading-screen {
@@ -109,44 +110,34 @@
         }
 
         .profile-picture {
-            max-width: 12vw; /* Responsive size */
-            margin-top: 4px;
-            margin-bottom: 4px;
+            position: relative; /* Relative position for absolute ring */
+            width: 200px; /* Fixed width for profile picture */
+            height: 200px; /* Fixed height for profile picture */
             border-radius: 50%; /* Circular shape */
             overflow: hidden; /* Ensure image does not overflow */
-            position: relative; /* Position relative for absolute border */
             display: flex;
             justify-content: center;
             align-items: center;
-            border: 5px solid #ff14ff; /* Pink border */
         }
 
         .profile-picture img {
             width: 100%;
+            height: auto;
             border-radius: 50%; /* Circular shape */
+            display: block;
         }
 
-        .profile-picture .animated-border {
+        /* Pink ring around the profile picture */
+        .profile-picture::before {
+            content: '';
             position: absolute;
             top: -5px;
             left: -5px;
             right: -5px;
             bottom: -5px;
-            border: 5px solid transparent; /* Initial transparent border */
+            border: 5px solid #ff14ff; /* Pink ring */
             border-radius: 50%;
-            z-index: 1;
-            animation: animateBorder 4s linear infinite;
-        }
-
-        @keyframes animateBorder {
-            0% {
-                transform: rotate(0deg);
-                box-shadow: 0 0 20px rgba(255, 20, 147, 0.8);
-            }
-            100% {
-                transform: rotate(360deg);
-                box-shadow: 0 0 20px rgba(255, 20, 147, 0.8);
-            }
+            z-index: 0;
         }
 
         .intro {
@@ -235,11 +226,6 @@
             margin: 0;
         }
 
-        .valorant-logo {
-            width: 100px;
-            margin-top: 20px;
-        }
-
         @keyframes slideIn {
             0% {
                 right: -100%; /* Start off-screen to the right */
@@ -271,7 +257,8 @@
             }
 
             .profile-picture {
-                max-width: 40vw; /* Increase profile picture size on smaller screens */
+                width: 40vw; /* Increase profile picture size on smaller screens */
+                height: 40vw; /* Maintain aspect ratio */
             }
 
             .intro p {
@@ -307,75 +294,31 @@
         <h1>Loading<span id="ellipsis"></span></h1>
     </div>
     <video id="video-background" autoplay muted loop playsinline>
-        <source src="Main.mp4" type="video/mp4">
+        <source src="BackgroundVideo.mp4" type="video/mp4">
     </video>
-    <video id="main-video" autoplay muted loop playsinline>
-        <source src="Main.mp4" type="video/mp4">
-    </video>
-    <div id="main-content">
-        <header>
-            <h1>Ah, skill issue I'm afraid.</h1>
-        </header>
-        <div class="content">
-            <div class="profile-picture">
-                <div class="animated-border"></div> <!-- Animated border -->
-                <img src="448969993_1005954630665614_4173930242296266244_n.jpg" alt="Profile Picture">
-            </div>            
-            <div class="intro">
-                <h2>ngleeqthai</h2>
-                <p>social media:</p>
-            </div>
-            <div class="links">
-                <a href="https://www.facebook.com/ngleeqthai/" target="_blank">Facebook</a>
-                <a href="https://www.instagram.com/_ngleeq.thai/?hl=en" target="_blank">Instagram</a>
-                <a href="https://steamcommunity.com/id/ngleeqthai0212/" target="_blank">Steam</a>
-                <a href="https://specs.gg/ngleeq.thai" target="_blank">My Settings</a>
-                <a href="https://tracker.gg/valorant/profile/riot/WWWWWWWWWWWWWWW%231234/overview" target="_blank">Valorant Tracker</a>
-            </div>
+    <header>
+        <h1>Welcome to my world</h1>
+    </header>
+    <div class="content">
+        <div class="profile-picture">
+            <img src="profile.jpg" alt="Profile Picture">
         </div>
-        <footer>
-            <p>&copy; WW WWW WWW WW WW WWW WWW WWW</p>
-        </footer>
+        <div class="intro">
+            <h2>Hello, I'm ngleeqthai</h2>
+            <p>Valorant player and enthusiast.</p>
+        </div>
+        <div class="links">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Steam</a>
+            <a href="#">Tracker</a>
+        </div>
     </div>
-
+    <footer>
+        <p>© 2024 ngleeqthai. All rights reserved.</p>
+    </footer>
     <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            // Delay before starting loading video
-            setTimeout(function() {
-                // Show and start loading video from the 3rd second instantly
-                const loadingVideo = document.getElementById("loading-video");
-                loadingVideo.currentTime = 3; // Start from the 3rd second
-                loadingVideo.style.display = "block"; // Show loading video
-                loadingVideo.play(); // Start playing loading video
-            }, 3000); // 3000 milliseconds delay before showing loading video
-
-            // Hide the loading screen and show the video background and main content after 6 seconds from showing loading video
-            setTimeout(function() {
-                document.getElementById("loading-screen").style.display = "none";
-                document.getElementById("loading-video").style.display = "none"; // Hide loading video
-                document.getElementById("video-background").style.filter = "none"; // Remove blur effect
-                document.getElementById("main-video").style.display = "block"; // Display main video
-                document.getElementById("main-video").play(); // Play main video
-                document.getElementById("main-content").style.display = "block";
-            }, 9000); // 9000 milliseconds = 3 seconds delay + 6 seconds
-
-            // Ellipsis animation (now faster, every 166 milliseconds)
-            const ellipsis = document.getElementById('ellipsis');
-            let count = 0;
-            setInterval(() => {
-                count++;
-                if (count === 1) {
-                    ellipsis.textContent = '';
-                } else if (count === 2) {
-                    ellipsis.textContent = '.';
-                } else if (count === 3) {
-                    ellipsis.textContent = '..';
-                } else if (count === 4) {
-                    ellipsis.textContent = '...';
-                    count = 0;
-                }
-            }, 166); // Change every 0.166 seconds (166 milliseconds)
-        });
+        // JavaScript code can be added here if needed
     </script>
 </body>
 </html>
